--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,23 @@
   "version": "1.0",
   "description": "Shows account creation dates next to post timestamps",
   "permissions": [
-    "storage",
-    "activeTab"
+    "storage"
   ],
+  "host_permissions": [
+    "https://*.twitter.com/*",
+    "https://*.x.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "https://*.twitter.com/*",
+        "https://*.x.com/*"
+      ],
       "js": ["content.js"]
     }
-  ],
-  "icons": {
-    "48": "icon48.png",
-    "128": "icon128.png"
-  }
+  ]
+
 } 
