--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,10 @@
   "version": "1.0",
   "description": "Shows account creation dates next to post timestamps",
   "permissions": [
-    "storage"
+    "storage",
+    "tabs",
+    "scripting",
+    "windows"
   ],
   "host_permissions": [
     "https://*.twitter.com/*",
@@ -22,5 +25,4 @@
       "js": ["content.js"]
     }
   ]
-
 } 
