--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,22 @@
 {
   "manifest_version": 3,
-  "name": "Account Creation Date Viewer",
+  "name": "Twitter Join Date Viewer",
   "version": "1.0",
-  "description": "Shows account creation dates next to post timestamps",
-  "permissions": [
-    "storage",
-    "tabs",
-    "scripting",
-    "windows"
-  ],
+  "description": "Shows account creation dates on tweets",
+  "permissions": [],
   "host_permissions": [
-    "https://*.twitter.com/*",
-    "https://*.x.com/*"
+    "https://twitter.com/*",
+    "https://x.com/*"
   ],
-  "background": {
-    "service_worker": "background.js"
-  },
+  "web_accessible_resources": [{
+    "resources": ["interceptor.js"],
+    "matches": ["https://twitter.com/*", "https://x.com/*"]
+  }],
   "content_scripts": [
     {
-      "matches": [
-        "https://*.twitter.com/*",
-        "https://*.x.com/*"
-      ],
-      "js": ["content.js"]
+      "matches": ["https://twitter.com/*", "https://x.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_start"
     }
   ]
-} 
+}
