--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,9 @@
   "name": "Twitter Join Date Viewer",
   "version": "1.0",
   "description": "Shows account creation dates on tweets",
-  "permissions": [],
+  "permissions": [
+    "storage"
+  ],
   "host_permissions": [
     "https://twitter.com/*",
     "https://x.com/*"
